updated main class