@@ -83,14 +83,15 @@
                     <execution>
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
                         <configuration>
-                            <mainClass>com.viduwa.minigames/com.viduwa.minigames.HelloApplication</mainClass>
-                            <launcher>app</launcher>
-                            <jlinkZipName>app</jlinkZipName>
-                            <jlinkImageName>app</jlinkImageName>
-                            <noManPages>true</noManPages>
-                            <stripDebug>true</stripDebug>
-                            <noHeaderFiles>true</noHeaderFiles>
+                            <options>
+                                <option>--enable-native-access=javafx.graphics</option>
+                                <option>--enable-native-access=org.xerial.sqlitejdbc</option>
+                            </options>
+                            <mainClass>com.viduwa.minigames/com.viduwa.minigames.Main</mainClass>
                         </configuration>
                     </execution>
                 </executions>
